# local-llm-pdf-ocr

./: .gitignore  AGENT.md  CLAUDE.md  LICENSE  README.md  hybrid_aligner.py  main.py  ocr.py  pdf_utils.py  pyproject.toml  server.py  verify_output.py
.github/workflows/: release.yml  test.yml
examples/: image.avif
scripts/: build_fixture.py  confidence_eval.py  confidence_image.py  debug_alignment.py  debug_image_input.py  debug_llm_raw.py  fixture_from_output.py  inspect_grounded_lines.py  test_check.py  visualize_bboxes.py  visualize_comparison.py
src/pdf_ocr/: __init__.py  cli.py  pipeline.py  server.py
src/pdf_ocr/core/: __init__.py  aligner.py  grounded.py  ocr.py  pdf.py
src/pdf_ocr/static/: index.html  style.css
src/pdf_ocr/utils/: __init__.py  image.py
static/: index.html  script.js
tests/: conftest.py  test_aligner.py  test_embedding_position.py  test_evaluation.py  test_grounded.py  test_image.py  test_integration.py  test_ocr.py  test_pdf.py  test_pipeline.py
tests/fixtures/: ground_truth_dense.json  ground_truth_digital.json  ground_truth_handwritten.json  ground_truth_hybrid.json  ground_truth_image.json  ground_truth_notes.json
