[project]
name = "pdf-ocr-llm"
version = "0.1.0"
description = "Transform scanned and written documents into fully searchable, selectable PDFs using the power of Local LLM Vision"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.4",
    "openai>=2.11.0",
    "pillow>=11.3",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
    "surya-ocr>=0.17.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python-headless>=4.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
# surya-ocr 0.17.x pins pillow <11, but we want Pillow ≥11.3 for native
# AVIF decoding (drops the pillow-avif-plugin runtime dep entirely). The
# Pillow 10→11 changes surya might hit are deprecated-API removals and
# Python 3.8 drop; both already aligned with our requires-python ≥3.10
# floor, so the override is safe in practice.
override-dependencies = [
    "pillow>=11.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: loads Surya models (~5s first run) — skip with '-m \"not slow\"'",
    "live_llm: hits a real LLM endpoint — skip unless LM Studio is running",
]
filterwarnings = [
    "ignore::pydantic.PydanticDeprecatedSince20:surya.*",
]
